--- a/htdocs/application/views/asset/css/style.css
+++ b/htdocs/application/views/asset/css/style.css
@@ -1,4 +1,4 @@
-/* 1. 공통 */
+/* 1. common */
 * {
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
   list-style-type: none;
@@ -141,7 +141,7 @@ div.readme {
 }
 
 /* 5. userguide/userguide.php */
-body > main > section.userguide > h4 {
+section.userguide > h4 {
   margin: 50px 0 50px 0;
   padding: 0 0 10px 0;
   text-align: center;
@@ -149,82 +149,201 @@ body > main > section.userguide > h4 {
   color: rgb(108, 108, 108);
 }
 
-body > main > section.userguide > div {
-  margin: 0;
-  padding: 50px 0 50px 0;
-}
-body > main > section.userguide > div > div > div:nth-child(1) {
-  margin: auto;
-  padding: 0;
-  width: 49%;
-  display: inline-flex;
-  text-align: center;
-}
-
-body > main > section.userguide > div > div > div:nth-child(1) > table {
-  margin: auto;
-  padding: 0;
+section.userguide
+  > div
+  > div.section1
+  > div
+  > div:nth-child(1)
+  > p:nth-child(1) {
   width: 70%;
-  text-align: center;
-}
-
-body > main > section.userguide > div > div > div:nth-child(1) > table > tbody > tr:nth-child(1) > th {
-  margin: 0;
-  padding: 0 0 20px 0;
-  text-align: center;
-  font-size: 1.2rem;
-  color: rgb(108, 108, 108);
-}
-
-body > main > section.userguide > div > div > div:nth-child(1) > table > tbody > tr:nth-child(3) > td {
-  margin: 0;
-  padding: 20px 0 0 0;
+  margin: 0 auto;
   text-align: justify;
-  font-size: 1rem;
+  color: rgb(133, 133, 133);
+}
+
+section.userguide
+  > div
+  > div.section1
+  > div
+  > div:nth-child(1)
+  > p:nth-child(2) {
+  width: 70%;
+  margin: 50px auto;
+  font-weight: bold;
+  color: rgb(133, 133, 133);
+}
+
+section.userguide > div > div.section1 > div > div:nth-child(2) > h5 {
+  margin: 70px;
+  padding: 0;
+  font-size: 1.5rem;
   color: rgb(108, 108, 108);
 }
 
-body > main > section.userguide > div > div > div:nth-child(2) {
-  margin: auto;
-  padding: 0;
-  width: 50%;
-  display: inline-flex;
-  text-align: center;
-}
-
-body > main > section.userguide > div > div > div:nth-child(2) > table {
-  margin: auto;
-  padding: 0;
-  width: 50%;
-  text-align: center;
-}
-
-body > main > section.userguide > div > div > div:nth-child(2) > table > tbody > tr:nth-child(1) > th {
+section.userguide
+  > div
+  > div.section1
+  > div
+  > div:nth-child(2)
+  > div:nth-child(2) {
+  width: calc(50% - 10px);
   margin: 0;
-  padding: 0 0 20px 0;
-  text-align: center;
+  padding: 0;
+  display: inline-block;
+  vertical-align: top;
+}
+
+section.userguide
+  > div
+  > div.section1
+  > div
+  > div:nth-child(2)
+  > div:nth-child(2)
+  > p {
+  margin: 0;
+  padding: 0;
+  display: left;
+  text-align: left;
+  color: rgb(133, 133, 133);
+}
+
+section.userguide
+  > div
+  > div.section1
+  > div
+  > div:nth-child(2)
+  > div:nth-child(2)
+  > p:nth-child(2) {
+  margin: 10px 0;
+  padding: 0;
+}
+
+section.userguide
+  > div
+  > div.section1
+  > div
+  > div:nth-child(2)
+  > div:nth-child(2)
+  > p
+  > strong {
+  color: rgb(108, 108, 108);
+}
+
+section.userguide
+  > div
+  > div.section1
+  > div
+  > div:nth-child(2)
+  > div:nth-child(3) {
+  width: calc(50% - 10px);
+  margin: 0;
+  padding: 0;
+  display: inline-block;
+  vertical-align: top;
+}
+
+section > div > div.section1 > div > div:nth-child(2) > div:nth-child(3) > p {
+  margin: 0;
+  padding: 0;
+  display: left;
+  text-align: left;
+  color: rgb(133, 133, 133);
+}
+
+section.userguide
+  > div
+  > div.section1
+  > div
+  > div:nth-child(2)
+  > div:nth-child(3)
+  > h5 {
+  margin: 0;
+  padding: 0;
   font-size: 1.2rem;
+}
+
+section.userguide
+  > div
+  > div.section1
+  > div
+  > div:nth-child(2)
+  > div:nth-child(3)
+  > p
+  > strong {
+  display: inline-block;
+  width: 100px;
+  margin: 0 10px 10px 0;
+  padding: 0;
+}
+
+section.userguide
+  > div
+  > div.section1
+  > div
+  > div:nth-child(2)
+  > div:nth-child(3)
+  > p:nth-child(5) {
+  margin: 20px 0 0 0;
+}
+
+section.userguide > div > div.section2 > div > div:nth-child(1) {
+  margin: 100px 0 0 0;
+  padding: 0;
+  color: rgb(133, 133, 133);
+}
+
+section.userguide > div > div.section2 > div > div:nth-child(2) > h5 {
+  margin: 50px 0 30px 0;
+  padding: 0;
+  font-size: 1.5rem;
   color: rgb(108, 108, 108);
 }
 
-body > main > section.userguide > div > div > div:nth-child(2) > table > tbody > tr:nth-child(2) > td:nth-child(1),
-body > main > section.userguide > div > div > div:nth-child(2) > table > tbody > tr:nth-child(2) > td:nth-child(2) {
+section.userguide > div > div.section2 > div > div:nth-child(2) > table {
+  width: 80%;
+  margin: 0 auto;
+}
+
+section.userguide
+  > div
+  > div.section2
+  > div
+  > div:nth-child(2)
+  > table
+  > tbody
+  > tr:nth-child(1)
+  > th:nth-child(1) {
+  width: 200px;
   margin: 0;
   padding: 0;
-  text-align: center;
-  font-size: 1.2rem;
+}
+
+section.userguide
+  > div
+  > div.section2
+  > div
+  > div:nth-child(2)
+  > table
+  > tbody
+  > tr:nth-child(1) {
   color: rgb(108, 108, 108);
 }
 
-body > main > section.userguide > div > div > div:nth-child(2) > table > tbody > tr > td {
+section.userguide
+  > div
+  > div.section2
+  > div
+  > div:nth-child(2)
+  > table
+  > tbody
+  > tr
+  > td {
   margin: 0;
-  padding: 20px 0 0 0;
-  text-align: justify;
-  font-size: 1rem;
-  color: rgb(108, 108, 108);
+  padding: 10px 0 10px 20px;
+  text-align: left;
+  color: rgb(133, 133, 133);
+  border-bottom: 1px dotted rgb(108, 108, 108);
 }
-
-
 
 /* 6. crosslinker/crosslinker.php & humanprotein/humanprotein.php */
 section.db-list {
@@ -248,7 +367,6 @@ section.db-list > div > table > tbody > tr > td {
   text-align: center;
   border-bottom: 1px dotted rgb(108, 108, 108);
 }
-
 
 /* 7. search/search.php */
 section.search > p {
@@ -290,20 +408,35 @@ form.searchbox > div div > ul > li > label > select {
   height: 30px;
 }
 
-form.searchbox > div:nth-child(1) > div:nth-child(2) > ul > li:nth-child(4) > p {
+form.searchbox
+  > div:nth-child(1)
+  > div:nth-child(2)
+  > ul
+  > li:nth-child(4)
+  > p {
   font-size: 1rem;
   font-weight: bold;
   text-align: left;
   color: rgb(108, 108, 108);
 }
 
-form.searchbox >  div:nth-child(1) > div:nth-child(2) > ul > li:nth-child(4) > label {
+form.searchbox
+  > div:nth-child(1)
+  > div:nth-child(2)
+  > ul
+  > li:nth-child(4)
+  > label {
   margin: 0 20px 0 0;
   width: 10px;
   height: 10px;
 }
 
-form.searchbox >  div:nth-child(1) > div:nth-child(2) > ul > li:nth-child(5) > label {
+form.searchbox
+  > div:nth-child(1)
+  > div:nth-child(2)
+  > ul
+  > li:nth-child(5)
+  > label {
   margin: 0 20px 0 0;
   width: 10px;
   height: 10px;
@@ -330,16 +463,58 @@ form.searchbox > div:nth-child(1) > div.modifications > ul > li > div > p {
   color: rgb(108, 108, 108);
 }
 
-form.searchbox > div:nth-child(1) > div.modifications > ul > li > label > input {
+form.searchbox
+  > div:nth-child(1)
+  > div.modifications
+  > ul
+  > li
+  > label
+  > input {
   margin: 0 20px 0 0;
   width: 10px;
   height: 10px;
 }
 
-body > main > section > form > div:nth-child(1) > div.modifications > ul > li:nth-child(2) > div > label:nth-child(2),
-body > main > section > form > div:nth-child(1) > div.modifications > ul > li:nth-child(2) > div > label:nth-child(3),
-body > main > section > form > div:nth-child(1) > div.modifications > ul > li:nth-child(3) > div > label:nth-child(2),
-body > main > section > form > div:nth-child(1) > div.modifications > ul > li:nth-child(3) > div > label:nth-child(3) {
+body
+  > main
+  > section
+  > form
+  > div:nth-child(1)
+  > div.modifications
+  > ul
+  > li:nth-child(2)
+  > div
+  > label:nth-child(2),
+body
+  > main
+  > section
+  > form
+  > div:nth-child(1)
+  > div.modifications
+  > ul
+  > li:nth-child(2)
+  > div
+  > label:nth-child(3),
+body
+  > main
+  > section
+  > form
+  > div:nth-child(1)
+  > div.modifications
+  > ul
+  > li:nth-child(3)
+  > div
+  > label:nth-child(2),
+body
+  > main
+  > section
+  > form
+  > div:nth-child(1)
+  > div.modifications
+  > ul
+  > li:nth-child(3)
+  > div
+  > label:nth-child(3) {
   margin: 0 0 0 20px;
 }
 
@@ -393,7 +568,16 @@ body > main > section > div > div:nth-child(1) > div.identify_ppis > table {
   white-space: nowrap;
 }
 
-body > main > section > div > div:nth-child(1) > div.identify_ppis > table > tbody > tr:nth-child(2) > td {
+body
+  > main
+  > section
+  > div
+  > div:nth-child(1)
+  > div.identify_ppis
+  > table
+  > tbody
+  > tr:nth-child(2)
+  > td {
   font-size: 0.9rem;
   text-align: center;
   color: rgb(108, 108, 108);
@@ -408,7 +592,13 @@ body > main > section.result > div:nth-child(1) > div > div.column_description {
   background-color: #ffffff;
 }
 
-body > main > section.result > div > div:nth-child(1) > div.column_description > h4 {
+body
+  > main
+  > section.result
+  > div
+  > div:nth-child(1)
+  > div.column_description
+  > h4 {
   margin: 10px 0 0 0;
   padding: 0 0 10px 0;
   display: inline-block;
@@ -417,7 +607,13 @@ body > main > section.result > div > div:nth-child(1) > div.column_description >
   color: rgb(108, 108, 108);
 }
 
-body > main > section.result > div > div:nth-child(1) > div.column_description > table {
+body
+  > main
+  > section.result
+  > div
+  > div:nth-child(1)
+  > div.column_description
+  > table {
   margin: 10px 0 10px 0;
   padding: 0;
   width: 100%;
@@ -427,27 +623,71 @@ body > main > section.result > div > div:nth-child(1) > div.column_description >
   white-space: nowrap;
 }
 
-body > main > section.result > div > div:nth-child(1) > div.column_description > table > tbody > tr {
+body
+  > main
+  > section.result
+  > div
+  > div:nth-child(1)
+  > div.column_description
+  > table
+  > tbody
+  > tr {
   margin: 0;
   padding: 0 20px 10px 0;
   border-bottom: 1px solid rgb(190, 190, 190);
 }
 
-body > main > section.result > div > div:nth-child(1) > div.column_description > table > tbody > tr > td {
+body
+  > main
+  > section.result
+  > div
+  > div:nth-child(1)
+  > div.column_description
+  > table
+  > tbody
+  > tr
+  > td {
   margin: 0;
   padding: 0 20px 10px 0;
 }
 
-body > main > section > div > div:nth-child(1) > div.column_description > table > tbody > tr:nth-child(13) > td {
+body
+  > main
+  > section
+  > div
+  > div:nth-child(1)
+  > div.column_description
+  > table
+  > tbody
+  > tr:nth-child(13)
+  > td {
   font-weight: bold;
 }
 
-body > main > section > div > div:nth-child(1) > div.column_description > table > tbody > tr:nth-child(4) > td:nth-child(1) {
+body
+  > main
+  > section
+  > div
+  > div:nth-child(1)
+  > div.column_description
+  > table
+  > tbody
+  > tr:nth-child(4)
+  > td:nth-child(1) {
   font-weight: bolder;
   color: rgb(90, 90, 255);
 }
 
-body > main > section > div > div:nth-child(1) > div.column_description > table > tbody > tr:nth-child(4) > td:nth-child(2) {
+body
+  > main
+  > section
+  > div
+  > div:nth-child(1)
+  > div.column_description
+  > table
+  > tbody
+  > tr:nth-child(4)
+  > td:nth-child(2) {
   font-weight: bolder;
   color: rgb(90, 90, 255);
 }
@@ -488,7 +728,11 @@ body > main > section > div > div:nth-child(2) {
   color: rgb(108, 108, 108);
 }
 
-#searchForm > div > div:nth-child(2) > div.summary_score > input[type=number] {
+#searchForm
+  > div
+  > div:nth-child(2)
+  > div.summary_score
+  > input[type="number"] {
   margin: 0px 0 10px 0;
   padding: 0;
   width: 50%;
@@ -515,7 +759,7 @@ body > main > section > div > div:nth-child(2) {
   color: rgb(108, 108, 108);
 }
 
-#searchForm > div > div:nth-child(3) > div > input[type=text] {
+#searchForm > div > div:nth-child(3) > div > input[type="text"] {
   margin: 0px 0 10px 0;
   padding: 0;
   width: 100%;
@@ -546,12 +790,28 @@ body > main > section.result > div > div.calculate_mass > table {
   color: rgb(108, 108, 108);
 }
 
-body > main > section.result > div > div.calculate_mass > table > tbody > tr > th {
+body
+  > main
+  > section.result
+  > div
+  > div.calculate_mass
+  > table
+  > tbody
+  > tr
+  > th {
   width: 100px;
   height: 50px;
 }
 
-body > main > section.result > div > div.calculate_mass > table > tbody > tr > td {
+body
+  > main
+  > section.result
+  > div
+  > div.calculate_mass
+  > table
+  > tbody
+  > tr
+  > td {
   text-align: center;
   border-bottom: 1px dotted rgb(108, 108, 108);
 }
@@ -610,7 +870,7 @@ body > main > section > div > div.calculate_mass > div > h4 {
 }
 
 body > main > section.result > div > div:nth-child(5) > form {
-  margin: 20px;
+  margin: 0;
   padding: 0;
   text-align: center;
 }
